--- a/app/views/users/usersList.scala.html
+++ b/app/views/users/usersList.scala.html
@@ -32,11 +32,13 @@
 					<td>
 					 	<span class="col-md-offset-1">
 					 		<a href="@routes.Users.editUser(user._id)">
-							<i class="glyphicon glyphicon-pencil"></i></a>
+								<i class="glyphicon glyphicon-pencil"></i>
+							</a>
 					 	</span>
 					 	<span class="col-md-offset-2">
 					 		<a data-toggle="modal" data-target="#confirmModal" data-user-id="@user._id" data-user-first-name="@user.firstName" data-user-last-name="@user.lastName">
-							<i class="glyphicon glyphicon-remove"></i></a>
+								<i class="glyphicon glyphicon-remove"></i>
+							</a>
 					 	</span>
 						
 						
