--- a/app/views/courses/courseMeetingDetails.scala.html
+++ b/app/views/courses/courseMeetingDetails.scala.html
@@ -18,7 +18,7 @@
 						<div class="col-md-6">
 						    <span class="pull-right">
 						    	<!-- editCourse(courseId) -->
-						    	<a class="btn btn-danger" href="@routes.Courses.loadCourseDraft()">Powrót do kursu bez zapisywania</a> 
+						    	<a class="btn btn-danger" href="@routes.Courses.loadCourseDraft(courseId)">Powrót do kursu bez zapisywania</a> 
 								<input id="saveButton" type="submit" class="btn btn-primary" value="Zapisz i wróć do kursu">
 						    </span>
 						</div>
@@ -28,8 +28,30 @@
 					<div class="col-md-offset-1 col-md-5">
 						<br>
 						@helper.inputText(meetingForm("group"), '_label -> "Grupa", 'size -> 30)
-						@helper.inputText(meetingForm("place"), '_label -> "Miejsce kursu", 'size -> 30)
-						@helper.inputText(meetingForm("date"), '_label -> "Data spotkania", 'size -> 30)
+						@helper.inputText(meetingForm("place"), '_label -> "Miejsce zajęć", 'size -> 30)
+						<!-- @helper.inputText(meetingForm("date"), '_label -> "Data spotkania", 'size -> 30) -->
+						
+						<div class="container">
+						    <div class="row">
+						        <div class='col-sm-6'>
+						            <div class="form-group">
+						                <div class='input-group date' id='datetimepicker1'>
+						                 	<label for="date">Data spotkania</label>
+						                     <input type="text" id="date" name="date" value="" size="30"/>
+						                    <span class="input-group-addon">
+						                        <span class="glyphicon glyphicon-calendar"></span>
+						                    </span>
+						                </div>
+						            </div>
+						        </div>
+						        <script type="text/javascript">
+						            $(function () {
+						                $('#datetimepicker1').datetimepicker();
+						            });
+						        </script>
+						    </div>
+						</div>
+						
 						@helper.inputText(meetingForm("subject"), '_label -> "Temat zajęć", 'size -> 30)		
 						@helper.textarea(meetingForm("description"), '_label -> "Opis", 'size -> 30, 'rows -> 3)
 						@select(meetingForm("meetingStatus"),
